--- a/ExtJSDemo/src/main/webapp/resources/01-basics/installation.html
+++ b/ExtJSDemo/src/main/webapp/resources/01-basics/installation.html
@@ -14,34 +14,23 @@
 <script type="text/javascript" src="Client.js"></script>
 <script type="text/javascript" src="Category.js"></script>
 <script type="text/javascript" src="SubCategory.js"></script>
-
+<script type="text/javascript" src="LC.js"></script>
+<script type="text/javascript" src="Cont.js"></script>
 <script>
+	Ext.onReady(function() {
 
-/* var category = Ext.create("Category", {
-	id : 1,
-	name : "John D",
-	description : "Test Description"
-});
+		Ext.create("Cont", {
+			renderTo : Ext.getBody(),
+			items : [ {
+				xtype : "component",
+				html : "Component one"
+			}, {
+				xtype : "component",
+				html : "Component two"
+			} ]
+		});
 
-console.log(category.get("name"));
-console.log(category.__proto__ instanceof Ext.data.Model); */ 
-console.log(SubCategory.sequence);
-var subCategory = Ext.create("SubCategory", {
-	id : 2,
-	name : "John S",
-	description : "Test Description"
-}); 
-
-console.log(subCategory.get("name"));
-console.log(SubCategory.hasOwnProperty("sequence"));
-console.log(SubCategory.sequence);
-
-var client = Ext.create("Client", {
-	name : "Fey"
-});
-console.log(client.hasOwnProperty("name"));
-console.log(client.name);
-
+	});
 </script>
 
 
