--- a/ExtJSDemo/src/main/webapp/resources/01-basics/installation.html
+++ b/ExtJSDemo/src/main/webapp/resources/01-basics/installation.html
@@ -19,25 +19,86 @@
 <script>
 	Ext.onReady(function() {
 
-		var win = Ext.create("MyWindow", {
-			title : "My first window",
-			width : 300,
-			height : 200,
-			maximizable : true,
+		var cardNav = function(incr) {
+			var l = Ext.getCmp('card-wizard-panel').getLayout();
+			var i = l.activeItem.id.split('card-')[1];
+			var next = parseInt(i, 10) + incr;
+			console.log("active: " + i + " -- " + incr + " -- " + next);
+			l.setActiveItem(next);
+			Ext.getCmp('card-prev').setDisabled(next === 0);
+			Ext.getCmp('card-next').setDisabled(next === 2);
+		};
+
+		var panel = Ext.create("Ext.panel.Panel", {
+			title : "Main Panel",
+			width : 600,
+			height : 400,
+			renderTo: Ext.getBody(),
 			defaults : {
 				xtype : "panel",
-				height : 60,
-				collapsible : true
+				collapsible : false
 			},
 			items : [ {
-				title : "Menu",
-				html : "The main menu"
+				id : 'card-wizard-panel',
+				title : 'Card Layout (Wizard)',
+				layout : 'card',
+				activeItem : 0,
+				bodyStyle : 'padding:10px',				
+				defaults : {
+					border : false,
+					padding : 10,
+					width : 300,
+					height : 200
+				},
+				items : [
+						{
+							id : 'card-0',
+							html : '<h1>Welcome to the Demo Wizard!</h1><p>Step 1 of 3</p><p>Please click the "Next" button to continue...</p>'
+						},
+						{
+							id : 'card-1',
+							html : '<p>Step 2 of 3</p><p>Almost there.  Please click the "Next" button to continue...</p>'
+						},
+						{
+							id : 'card-2',
+							html : '<h1>Congratulations!</h1><p>Step 3 of 3 - Complete</p>'
+						} ]
 			}, {
 				title : "Content",
-				html : "The main content!"
+				layout : {
+					type : "hbox",
+					align : "middle"
+					},
+				height : 100,
+				defaults : {
+					xtype : "button",
+					width : 50
+				},
+				items : [
+							{
+								id : 'card-prev',
+							    text: "Previous",
+							    listeners: {
+							        click: {
+							            element: 'el', 
+							            fn: Ext.Function.bind(cardNav, this, [-1])
+							        }
+							    }
+							},
+							{
+								id : 'card-next',
+								text: "Next",
+							    listeners: {
+							        click: {
+							            element: 'el', 
+							            fn: Ext.Function.bind(cardNav, this, [1])
+							        }
+							    }
+							} ]
 			} ]
 		});
-		win.show();
+		
+		panel.center();
 
 	});
 </script>
