--- a/ExtJSDemo/src/main/webapp/resources/01-basics/installation.html
+++ b/ExtJSDemo/src/main/webapp/resources/01-basics/installation.html
@@ -19,7 +19,7 @@
 <script>
 	Ext.onReady(function() {
 
-		var cardNav = function(incr) {
+		function cardNav(incr) {
 			var l = Ext.getCmp('card-wizard-panel').getLayout();
 			var i = l.activeItem.id.split('card-')[1];
 			var next = parseInt(i, 10) + incr;
@@ -27,7 +27,7 @@
 			l.setActiveItem(next);
 			Ext.getCmp('card-prev').setDisabled(next === 0);
 			Ext.getCmp('card-next').setDisabled(next === 2);
-		};
+		}
 
 		var panel = Ext.create("Ext.panel.Panel", {
 			title : "Main Panel",
@@ -78,10 +78,11 @@
 							{
 								id : 'card-prev',
 							    text: "Previous",
+							    disabled: true,
 							    listeners: {
 							        click: {
 							            element: 'el', 
-							            fn: Ext.Function.bind(cardNav, this, [-1])
+							            fn: cardNav.bind(this, -1)
 							        }
 							    }
 							},
@@ -91,7 +92,7 @@
 							    listeners: {
 							        click: {
 							            element: 'el', 
-							            fn: Ext.Function.bind(cardNav, this, [1])
+							            fn: cardNav.bind(this, 1)
 							        }
 							    }
 							} ]
