--- a/ExtJSDemo/src/main/webapp/index.html
+++ b/ExtJSDemo/src/main/webapp/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Hello Ext</title>
+<title>Hello ExtJS</title>
 
 <link rel="stylesheet" type="text/css"
 	href="ext-4.2.1/resources/css/ext-all.css">
 <script type="text/javascript" src="ext-4.2.1/ext-all.js"></script>
+<link rel="stylesheet" type="text/css"
+	href="resources/css/app.css">
 <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
