--- a/ExtJSDemo/src/main/webapp/index.html
+++ b/ExtJSDemo/src/main/webapp/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" type="text/css"
 	href="ext-4.2.1/resources/css/ext-all.css">
 <script type="text/javascript" src="ext-4.2.1/ext-all.js"></script>
-<link rel="stylesheet" type="text/css"
-	href="resources/css/app.css">
+<!-- <link rel="stylesheet" type="text/css"
+	href="resources/css/app.css"> -->
 <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
